--- a/css/main.css
+++ b/css/main.css
@@ -1,3 +1,23 @@
 html {
-  font-family: "Merriweather", serif;
+  font-family: Merriweather, serif;
+}
+
+tbody td {
+  height: 9em;
+}
+
+thead th,
+tbody td {
+  border: 1px solid #ccc;
+}
+
+.top-row {
+  border-top: 2px solid #ccc;
+}
+
+.vostok {
+  color: #666;
+  background-color: #f2f2f2;
+  border: 1px solid #333;
+  border-radius: 8px;
 }
