--- a/css/main.css
+++ b/css/main.css
@@ -3,7 +3,7 @@ html {
 }
 
 tbody td {
-  height: 9em;
+  height: 10rem;
 }
 
 thead th,
@@ -16,8 +16,36 @@ tbody td {
 }
 
 .vostok {
-  color: #666;
+  color: #333;
   background-color: #f2f2f2;
-  border: 1px solid #333;
+  border: 1px solid #666;
+  border-radius: 8px;
+}
+
+.remembrance {
+  color: #991919;
+  background-color: #f2bcbc;
+  border: 1px solid #b92828;
+  border-radius: 8px;
+}
+
+.kosmos {
+  color: #333;
+  background-color: #f2f2f2;
+  border: 1px solid #666;
+  border-radius: 8px;
+}
+
+.nov-15 {
+  color: #6b7e54;
+  background-color: #d1e0bf;
+  border: 1px solid #51603f;
+  border-radius: 8px;
+}
+
+.nov-22-23 {
+  color: #38448e;
+  background-color: #d2d6f0;
+  border: 1px solid #1d38da;
   border-radius: 8px;
 }
